--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "daisyui": "^4.12.10",
+    "emailjs-com": "^3.2.0",
     "vue": "^3.4.29",
     "vue-i18n": "^10.0.0-beta.5",
     "vue-router": "^4.4.0"
