--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,24 @@
+# Настройка страницы 404
+ErrorDocument 404 /404.html
+
+# Перенаправление всех запросов на index.html для SPA
 <IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteBase /mc-tools/
-  RewriteRule ^index\.html$ - [L]
+  RewriteBase /
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /mc-tools/index.html [L]
+  RewriteRule . /index.html [L]
 </IfModule>
+
+# Перенаправление с HTTP на HTTPS
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteCond %{HTTPS} off
+  RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+</IfModule>
+
+# Защита от доступа к конфиденциальным файлам
+<FilesMatch "^.*\.(env|config|log|gitignore|htaccess)$">
+  Order Allow,Deny
+  Deny from all
+</FilesMatch>
