--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "daisyui": "^4.12.10",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.13.0",
     "vue": "^3.4.29",
     "vue-i18n": "^10.0.0-beta.5",
     "vue-router": "^4.4.0"
