--- a/.github/workflows/notify_telegram.yml
+++ b/.github/workflows/notify_telegram.yml
@@ -3,7 +3,7 @@ name: Notify Telegram
 on:
   push:
     branches:
-      - main
+      - main  # Укажите ветки, которые хотите отслеживать
   release:
     types:
       - published
@@ -16,13 +16,21 @@ jobs:
       - name: Отправка уведомления о новом коммите
         if: github.event_name == 'push'
         run: |
+          REPO_URL="https://github.com/${{ github.repository }}"
+          COMMIT_URL="${REPO_URL}/commit/${{ github.sha }}"
+          MESSAGE="Новый коммит в репозитории [${{ github.repository }}](${REPO_URL}) на ветке \`${{ github.ref_name }}\`.\n\n**Сообщение коммита:**\n${{ github.event.head_commit.message }}\n\n**Автор:** ${{ github.event.head_commit.author.name }}\n\n[Посмотреть коммит](${COMMIT_URL})"
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="Новый коммит в репозитории ${{ github.repository }} на ветке ${{ github.ref }}.\nСообщение коммита: ${{ github.event.head_commit.message }}\nАвтор: ${{ github.event.head_commit.author.name }}"
+            -d parse_mode="Markdown" \
+            -d text="$MESSAGE"
 
       - name: Отправка уведомления о новом релизе
         if: github.event_name == 'release'
         run: |
+          REPO_URL="https://github.com/${{ github.repository }}"
+          RELEASE_URL="${{ github.event.release.html_url }}"
+          MESSAGE="Новый релиз в репозитории [${{ github.repository }}](${REPO_URL}).\n\n**Название релиза:**\n${{ github.event.release.name }}\n\n**Описание:**\n${{ github.event.release.body }}\n\n[Посмотреть релиз](${RELEASE_URL})"
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="Новый релиз в репозитории ${{ github.repository }}.\nНазвание релиза: ${{ github.event.release.name }}\nОписание: ${{ github.event.release.body }}\nURL: ${{ github.event.release.html_url }}"
+            -d parse_mode="Markdown" \
+            -d text="$MESSAGE"
