--- a/.github/workflows/notify_telegram.yml
+++ b/.github/workflows/notify_telegram.yml
@@ -3,7 +3,7 @@ name: Notify Telegram
 on:
   push:
     branches:
-      - main  # Укажите ветки, которые хотите отслеживать
+      - main
   release:
     types:
       - published
@@ -19,7 +19,7 @@ jobs:
           REPO_URL="https://github.com/${{ github.repository }}"
           COMMIT_URL="${REPO_URL}/commit/${{ github.sha }}"
           MESSAGE="Новый коммит в репозитории [${{ github.repository }}](${REPO_URL}) на ветке \`${{ github.ref_name }}\`.\n\n*Сообщение коммита:*\n${{ github.event.head_commit.message }}\n\n*Автор:* ${{ github.event.head_commit.author.name }}\n\n[Посмотреть коммит](${COMMIT_URL})\n\n#github #commit"
-          ESCAPED_MESSAGE=$(echo "$MESSAGE" | sed -E 's/([\\_*[\]()~`>#+\-=|{}.!])/\\\1/g')
+          ESCAPED_MESSAGE=$(echo "$MESSAGE" | sed -e 's/\./\\./g' -e 's/-/\\-/g' -e 's/_/\\_/g' -e 's/*/\\*/g' -e 's/(/\\(/g' -e 's/)/\\)/g' -e 's/!/\\!/g' -e 's/\[/\\[/g' -e 's/\]/\\]/g')
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
             -d parse_mode="MarkdownV2" \
@@ -31,7 +31,7 @@ jobs:
           REPO_URL="https://github.com/${{ github.repository }}"
           RELEASE_URL="${{ github.event.release.html_url }}"
           MESSAGE="Новый релиз в репозитории [${{ github.repository }}](${REPO_URL}).\n\n*Название релиза:*\n${{ github.event.release.name }}\n\n*Описание:*\n${{ github.event.release.body }}\n\n[Посмотреть релиз](${RELEASE_URL})\n\n#github #release"
-          ESCAPED_MESSAGE=$(echo "$MESSAGE" | sed -E 's/([\\_*[\]()~`>#+\-=|{}.!])/\\\1/g')
+          ESCAPED_MESSAGE=$(echo "$MESSAGE" | sed -e 's/\./\\./g' -e 's/-/\\-/g' -e 's/_/\\_/g' -e 's/*/\\*/g' -e 's/(/\\(/g' -e 's/)/\\)/g' -e 's/!/\\!/g' -e 's/\[/\\[/g' -e 's/\]/\\]/g')
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
             -d parse_mode="MarkdownV2" \
