--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.13.0",
     "vue": "^3.4.29",
     "vue-i18n": "^10.0.0-beta.5",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
